# drafter

./: .gitignore  Database-Migration-Checklist.md  OLD_DONT_USE-PRD.md  epic-fantasy-agent-roster-v2.md  epic-fantasy-claude-ecosystem.md  narrative-database-schema-complete.md  novel-ecosystem-prd-v1.1.md  pyproject.toml
.claude/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: README.md  mcp-tools.md  schema.md
docs/schema/: arcs.md  canon.md  chapters.md  characters.md  foreshadowing.md  gate.md  knowledge.md  magic.md  names.md  plot.md  publishing.md  relationships.md  scenes.md  session.md  structure.md  timeline.md  voice.md  world.md
docs/tools/: arcs.md  canon.md  (+16 more)
project-overview/: database-schema.md  drafter-prd.md
project-research/: BUILD-SPEC.md  agent-roster.md  database-schema.md  drafter-prd.md  plugin-ecosystem.md
tests/: conftest.py  test_arcs.py  test_canon.py  test_chapters.py  test_characters.py  test_clean_rebuild.py  test_foreshadowing.py  test_gate.py  test_knowledge.py  test_magic.py  test_names.py  test_pacing.py  test_plot.py  test_publishing.py  test_relationships.py  test_scenes.py  test_schema_validation.py  test_session.py  test_structure.py  test_timeline.py  test_tool_selection.py  test_voice.py  test_world.py
(+271 files in other folders)
